setup-scripts/04-istio/kub-feri-ai-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kub-feri-ai-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.kub.feri.ai'
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - '*.kub.feri.ai'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: wc-kub-feri-ai-tls
      mode: SIMPLE
